--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -1,54 +1,55 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Elections and Dissolutions in The G7" />
-		<meta property="og:description" content="Timeline of elections and dissolutions in the G7 countries after WWII" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png" />
-		<meta name="twitter:card" content="summary_large_image" />
-		<title>Elections and Dissolutions in The G7</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Elections and Dissolutions in The G7" />
+    <meta property="og:description" content="Timeline of elections and dissolutions in the G7 countries after WWII" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Elections and Dissolutions in The G7</title>
+		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/dissolution/description-amp-en.html">
     <link rel="stylesheet" href="../../assets/css/style.css">
-	</head>
-	<body class="work-description">
+  </head>
+  <body class="work-description">
     <div id="container">
-			<div id="icons-block">
-				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-				<i class="material-icons" id="icon-menu">menu</i>
-				<div id="menu">
-					<div id="menu-cover"></div>
-					<div id="menu-content">
-						<div class="item">
-							<i class="material-icons" id="icon-close">close</i>
-						</div>
-						<div class="item"><a href="../../">Home</a></div>
-						<div class="item"><a href="../../about/">About</a></div>
-						<div class="item"><a href="../../works/">Works</a></div>
-					</div>
-				</div>
-			</div>
-			<div id="title-block">
-				<div class="date">November 2017</div>
-				<h1>Elections and Dissolutions in The G7</h1>
-				<h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
-			</div>
-			<div id="eyecatch-block">
-				<a href="https://kaz-ogiwara.github.io/works/dissolution/">
-					<img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
-				</a>
-			</div>
-			<div id="article-block">
+      <div id="icons-block">
+        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
+        <i class="material-icons" id="icon-menu">menu</i>
+        <div id="menu">
+          <div id="menu-cover"></div>
+          <div id="menu-content">
+            <div class="item">
+              <i class="material-icons" id="icon-close">close</i>
+            </div>
+            <div class="item"><a href="../../">Home</a></div>
+            <div class="item"><a href="../../about/">About</a></div>
+            <div class="item"><a href="../../works/">Works</a></div>
+          </div>
+        </div>
+      </div>
+      <div id="title-block">
+        <div class="date">November 2017</div>
+        <h1>Elections and Dissolutions in The G7</h1>
+        <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
+      </div>
+      <div id="eyecatch-block">
+        <a href="https://kaz-ogiwara.github.io/works/dissolution/">
+          <img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
+        </a>
+      </div>
+      <div id="article-block">
         <p>This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
         <p>While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
         <p>Data source: <a href="http://dl.ndl.go.jp/view/download/digidepo_10202206_po_0923.pdf?contentNo=1" target="_blank">Takazawa, 2016</a></p>
         <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-				<p><a class="button" href="https://kaz-ogiwara.github.io/works/dissolution/">See the App</a></p>
-				<p class="disclaimer">The app may not be available in your system environment.</p>
-			</div>
+        <p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p class="disclaimer">The app may not be available in your system environment.</p>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="../../assets/js/script.js"></script>
-	</body>
+    <script src="../../assets/js/script.js"></script>
+  </body>
 </html>
