--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -1,56 +1,57 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Just Visualization: Japanese Coins" />
-		<meta property="og:description" content="Number of Coins Issued in Japan from 1948 to 2016" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png" />
-		<meta name="twitter:card" content="summary_large_image" />
-		<title>Just Visualization: Japanese Coins</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Just Visualization: Japanese Coins" />
+    <meta property="og:description" content="Number of Coins Issued in Japan from 1948 to 2016" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Just Visualization: Japanese Coins</title>
+		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/jpycoins/description-amp-en.html">
     <link rel="stylesheet" href="../../assets/css/style.css">
-	</head>
-	<body class="work-description">
+  </head>
+  <body class="work-description">
     <div id="container">
-			<div id="icons-block">
-				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-				<i class="material-icons" id="icon-menu">menu</i>
-				<div id="menu">
-					<div id="menu-cover"></div>
-					<div id="menu-content">
-						<div class="item">
-							<i class="material-icons" id="icon-close">close</i>
-						</div>
-						<div class="item"><a href="../../">Home</a></div>
-						<div class="item"><a href="../../about/">About</a></div>
-						<div class="item"><a href="../../works/">Works</a></div>
-					</div>
-				</div>
-			</div>
-			<div id="title-block">
-				<div class="date">February 2018</div>
-				<h1>Just Visualization: Japanese Coins</h1>
-				<h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
-			</div>
-			<div id="eyecatch-block">
-				<a href="https://kaz-ogiwara.github.io/works/jpycoins/">
-					<img id="eyecatch" src="../../assets/img/eyecatch_jpycoins.png">
-				</a>
-			</div>
-			<div id="article-block">
+      <div id="icons-block">
+        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
+        <i class="material-icons" id="icon-menu">menu</i>
+        <div id="menu">
+          <div id="menu-cover"></div>
+          <div id="menu-content">
+            <div class="item">
+              <i class="material-icons" id="icon-close">close</i>
+            </div>
+            <div class="item"><a href="../../">Home</a></div>
+            <div class="item"><a href="../../about/">About</a></div>
+            <div class="item"><a href="../../works/">Works</a></div>
+          </div>
+        </div>
+      </div>
+      <div id="title-block">
+        <div class="date">February 2018</div>
+        <h1>Just Visualization: Japanese Coins</h1>
+        <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
+      </div>
+      <div id="eyecatch-block">
+        <a href="https://kaz-ogiwara.github.io/works/jpycoins/">
+          <img id="eyecatch" src="../../assets/img/eyecatch_jpycoins.png">
+        </a>
+      </div>
+      <div id="article-block">
         <p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
         <p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
         <p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
         <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
         <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-				<p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
-				<p class="disclaimer">The app may not be available in your system environment.</p>
-			</div>
+        <p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p class="disclaimer">The app may not be available in your system environment.</p>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="../../assets/js/script.js"></script>
-	</body>
+    <script src="../../assets/js/script.js"></script>
+  </body>
 </html>
