--- a/works/musicxml/description-en.html
+++ b/works/musicxml/description-en.html
@@ -1,53 +1,52 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/musicxml/description-en.html" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Music score visualization" />
-		<meta property="og:description" content="Visualization of classic music score from Music XML" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png" />
-		<meta name="twitter:card" content="summary_large_image" />
-		<title>Music score visualization</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/musicxml/description-en.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Music score visualization" />
+    <meta property="og:description" content="Visualization of classic music score from Music XML" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Music score visualization</title>
+		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/musicxml/description-amp-en.html">
     <link rel="stylesheet" href="../../assets/css/style.css">
-	</head>
-	<body class="work-description">
+  </head>
+  <body class="work-description">
     <div id="container">
-			<div id="icons-block">
-				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-				<i class="material-icons" id="icon-menu">menu</i>
-				<div id="menu">
-					<div id="menu-cover"></div>
-					<div id="menu-content">
-						<div class="item">
-							<i class="material-icons" id="icon-close">close</i>
-						</div>
-						<div class="item"><a href="../../">Home</a></div>
-						<div class="item"><a href="../../about/">About</a></div>
-						<div class="item"><a href="../../works/">Works</a></div>
-					</div>
-				</div>
-			</div>
-			<div id="title-block">
-				<div class="date">April, 2017</div>
-				<h1>Music score visualization</h1>
-				<h3>Visualization of classic music score from Music XML</h3>
-			</div>
-			<div id="eyecatch-block">
-				<a href="https://kaz-ogiwara.github.io/works/musicxml/">
-					<img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
-				</a>
-			</div>
-			<div id="article-block">
+      <div id="icons-block">
+        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
+        <i class="material-icons" id="icon-menu">menu</i>
+        <div id="menu">
+          <div id="menu-cover"></div>
+          <div id="menu-content">
+            <div class="item">
+              <i class="material-icons" id="icon-close">close</i>
+            </div>
+            <div class="item"><a href="../../">Home</a></div>
+            <div class="item"><a href="../../about/">About</a></div>
+            <div class="item"><a href="../../works/">Works</a></div>
+          </div>
+        </div>
+      </div>
+      <div id="title-block">
+        <div class="date">April, 2017</div>
+        <h1>Music score visualization</h1>
+        <h3>Visualization of classic music score from Music XML</h3>
+      </div>
+      <div id="eyecatch-block">
+        <a href="https://kaz-ogiwara.github.io/works/musicxml/">
+          <img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
+        </a>
+      </div>
+      <div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="http://openmusicscore.org/" target="_blank">Open Music Score</a></p>
         <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-				<p><a class="button" href="https://kaz-ogiwara.github.io/works/musicxml/">See the App</a></p>
-				<p class="disclaimer">The app may not be available in your system environment.</p>
-			</div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="../../assets/js/script.js"></script>
-	</body>
+    <script src="../../assets/js/script.js"></script>
+  </body>
 </html>
