--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -1,55 +1,54 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Scientists Making a Queue" />
-		<meta property="og:description" content="How Nobel Prize laureates are Getting Older" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png" />
-		<meta name="twitter:card" content="summary_large_image" />
-		<title>Scientists Making a Queue</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Scientists Making a Queue" />
+    <meta property="og:description" content="How Nobel Prize laureates are Getting Older" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Scientists Making a Queue</title>
+		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/nobelprize/description-amp-en.html">
     <link rel="stylesheet" href="../../assets/css/style.css">
-	</head>
-	<body class="work-description">
+  </head>
+  <body class="work-description">
     <div id="container">
-			<div id="icons-block">
-				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-				<i class="material-icons" id="icon-menu">menu</i>
-				<div id="menu">
-					<div id="menu-cover"></div>
-					<div id="menu-content">
-						<div class="item">
-							<i class="material-icons" id="icon-close">close</i>
-						</div>
-						<div class="item"><a href="../../">Home</a></div>
-						<div class="item"><a href="../../about/">About</a></div>
-						<div class="item"><a href="../../works/">Works</a></div>
-					</div>
-				</div>
-			</div>
-			<div id="title-block">
-				<div class="date">May 2017</div>
-				<h1>Scientists Making a Queue</h1>
-				<h3>How Nobel Prize laureates are Getting Older</h3>
-			</div>
-			<div id="eyecatch-block">
-				<a href="https://kaz-ogiwara.github.io/works/nobelprize/">
-					<img id="eyecatch" src="../../assets/img/eyecatch_nobelprize.png">
-				</a>
-			</div>
-			<div id="article-block">
+      <div id="icons-block">
+        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
+        <i class="material-icons" id="icon-menu">menu</i>
+        <div id="menu">
+          <div id="menu-cover"></div>
+          <div id="menu-content">
+            <div class="item">
+              <i class="material-icons" id="icon-close">close</i>
+            </div>
+            <div class="item"><a href="../../">Home</a></div>
+            <div class="item"><a href="../../about/">About</a></div>
+            <div class="item"><a href="../../works/">Works</a></div>
+          </div>
+        </div>
+      </div>
+      <div id="title-block">
+        <div class="date">May 2017</div>
+        <h1>Scientists Making a Queue</h1>
+        <h3>How Nobel Prize laureates are Getting Older</h3>
+      </div>
+      <div id="eyecatch-block">
+        <a href="https://kaz-ogiwara.github.io/works/nobelprize/">
+          <img id="eyecatch" src="../../assets/img/eyecatch_nobelprize.png">
+        </a>
+      </div>
+      <div id="article-block">
         <p> is a visualisation of how Nobel Prize laureates have got older from the beginning of the prize. The winners of this prize are gradually getting older over the past 115 years, especially in the field of natural sciences. In Physics, for example, the latest ten laureates (avg. 71.1) are 23 years older than the first ten (avg. 47.8).</p>
         <p>The main feature of the visualisation is a composite graph that shows laureates with dots and the average age of the past 30 years displayed as a line. You can select a prize (trend line and laureates) and a line of another prize for comparison, from the select boxes above the graph. When the graph (each year) was hovered, detailed information of the winner in that year will be shown in the bottom­ right.</p>
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://www.nobelprize.org/" target="_blank">Nobel Prize Official Website</a></p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-				<p><a class="button" href="https://kaz-ogiwara.github.io/works/nobelprize/">See the App</a></p>
-				<p class="disclaimer">The app may not be available in your system environment.</p>
-			</div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="../../assets/js/script.js"></script>
-	</body>
+    <script src="../../assets/js/script.js"></script>
+  </body>
 </html>
