Fix AMP directory error

--- a/works/tourists/description-amp-en.html
+++ b/works/tourists/description-amp-en.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html">
-    <title>Just Visualization: Japanese Coins</title>
+		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/tourists/description-en.html">
+    <title>Tourists to Japan</title>
 		<style amp-custom>
       * {
         padding: 0;
@@ -154,9 +154,9 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "Article",
-				"headline": "Just Visualization: Japanese Coins",
+				"headline": "Tourists to Japan",
 				"image": [
-					"https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png"
+					"https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png"
 				]
 			}
 		</script>
@@ -171,21 +171,18 @@
         </a>
       </div>
       <div id="title-block">
-        <div class="date">February 2018</div>
-        <h1>Just Visualization: Japanese Coins</h1>
-        <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
+        <div class="date">11 Feb 2017</div>
+        <h1>Tourists to Japan</h1>
+        <h3>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
       </div>
       <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/jpycoins/">
-          <amp-img layout="responsive" src="../../assets/img/eyecatch_jpycoins.png" width="1200" height="630">
+        <a href="https://kaz-ogiwara.github.io/works/tourists/">
+          <amp-img layout="responsive" src="../../assets/img/eyecatch_tourists.png" width="1200" height="630">
         </a>
       </div>
       <div id="article-block">
-        <p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
-        <p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
-        <p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
-        <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
-        <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
+        <p>This work was submitted as a class assignment.</p>
+        <p>Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
         <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
