--- a/works/dissolution/description-amp-en.html
+++ b/works/dissolution/description-amp-en.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html">
-    <title>Just Visualization: Japanese Coins</title>
+		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/dissolution/description-en.html">
+    <title>Elections and Dissolutions in The G7</title>
 		<style amp-custom>
       * {
         padding: 0;
@@ -154,9 +154,9 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "Article",
-				"headline": "Just Visualization: Japanese Coins",
+				"headline": "Elections and Dissolutions in The G7",
 				"image": [
-					"https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png"
+					"https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png"
 				]
 			}
 		</script>
@@ -171,22 +171,20 @@
         </a>
       </div>
       <div id="title-block">
-        <div class="date">February 2018</div>
-        <h1>Just Visualization: Japanese Coins</h1>
-        <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
+        <div class="date">November 2017</div>
+        <h1>Elections and Dissolutions in The G7</h1>
+        <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
       </div>
       <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/jpycoins/">
-          <amp-img layout="responsive" src="../../assets/img/eyecatch_jpycoins.png" width="1200" height="630">
+        <a href="https://kaz-ogiwara.github.io/works/dissolution/">
+          <amp-img layout="responsive" src="../../assets/img/eyecatch_dissolution.png" width="1200" height="630">
         </a>
       </div>
       <div id="article-block">
-        <p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
-        <p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
-        <p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
-        <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
-        <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+        <p>This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
+        <p>While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
+        <p>Data source: <a href="http://dl.ndl.go.jp/view/download/digidepo_10202206_po_0923.pdf?contentNo=1" target="_blank">Takazawa, 2016</a></p>
+        <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
         <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
