--- a/works/teachers/description-amp-en.html
+++ b/works/teachers/description-amp-en.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html">
-    <title>Just Visualization: Japanese Coins</title>
+		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/teachers/description-en.html">
+    <title>Schools are depending on part-time teachers</title>
 		<style amp-custom>
       * {
         padding: 0;
@@ -154,9 +154,9 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "Article",
-				"headline": "Just Visualization: Japanese Coins",
+				"headline": "Schools are depending on part-time teachers",
 				"image": [
-					"https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png"
+					"https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png"
 				]
 			}
 		</script>
@@ -171,21 +171,19 @@
         </a>
       </div>
       <div id="title-block">
-        <div class="date">February 2018</div>
-        <h1>Just Visualization: Japanese Coins</h1>
-        <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
+        <div class="date">March 2018</div>
+        <h1>Schools are depending on part-time teachers</h1>
+        <h3>How and why the job security of elementary and junior high school teachers is collapsing</h3>
       </div>
       <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/jpycoins/">
-          <amp-img layout="responsive" src="../../assets/img/eyecatch_jpycoins.png" width="1200" height="630">
+        <a href="https://kaz-ogiwara.github.io/works/teachers/">
+          <amp-img layout="responsive" src="../../assets/img/eyecatch_teachers.png" width="1200" height="630">
         </a>
       </div>
       <div id="article-block">
-        <p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
-        <p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
-        <p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
-        <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
-        <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
+        <p>This project is about the job security of school teachers. In Japan, most children are enrolled in elementary school for six years (from six to 12 years of age) and in junior high school for three years (from 12 to 15 years of age) for their compulsory education. Traditionally, in these schools, most teachers are employed on a full-time and indefinite basis. However, over the past few decades, an increasing number of teachers have been working part-time - they are not in charge of entire classes, but only teach their chosen subject. The wage of part-time teachers is paid according to the classes they teach, and they are known for their low wages and unstable employment situation.</p>
+        <p>This project illustrates that the proportion of part-time teachers has increased in almost all of Japan’s prefectures (47 administrative divisions) over the past 20 years. Other data visualizations in this project also reveal that this trend is particularly affecting women and that the increase in part-time school teachers is a consequence of the finance deterioration of local governments, who have taken over the burden of the national government.</p>
+        <p>Data source: <a href="http://www.mext.go.jp/b_menu/toukei/chousa01/kihon/1267995.htm" target="_blank">Basic Research on School</a> and <a href="http://www.mext.go.jp/b_menu/toukei/001/index05.htm" target="_blank">Local Educational Expenditure Research</a>, The Ministry of Education, Culture, Sports, Science and Technology.</p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
         <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
