--- a/works/pyramids/description-amp-en.html
+++ b/works/pyramids/description-amp-en.html
@@ -185,7 +185,7 @@
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://esa.un.org/unpd/wpp/Download/Standard/Population/" target="_blank">UN World Population Prospects 2017</a></p>
         <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL for data acquisition and process</p>
-        <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/pyramids/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
     </div>
