--- a/works/teachers/description-amp-en.html
+++ b/works/teachers/description-amp-en.html
@@ -185,7 +185,7 @@
         <p>This project illustrates that the proportion of part-time teachers has increased in almost all of Japan’s prefectures (47 administrative divisions) over the past 20 years. Other data visualizations in this project also reveal that this trend is particularly affecting women and that the increase in part-time school teachers is a consequence of the finance deterioration of local governments, who have taken over the burden of the national government.</p>
         <p>Data source: <a href="http://www.mext.go.jp/b_menu/toukei/chousa01/kihon/1267995.htm" target="_blank">Basic Research on School</a> and <a href="http://www.mext.go.jp/b_menu/toukei/001/index05.htm" target="_blank">Local Educational Expenditure Research</a>, The Ministry of Education, Culture, Sports, Science and Technology.</p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-        <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/teachers/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
     </div>
