Update eyecatch image, add published date

--- a/works/earthquakes/index.html
+++ b/works/earthquakes/index.html
@@ -20,6 +20,7 @@
       <div id="title-block">
         <h1>Earthquakes in the world</h1>
         <h4>Animation of earthquakes on the earth in the past an hour to 30 days</h4>
+        <p>Feb 2017 / revised in July 2018</p>
       </div>
       <div id="description-block">
         <p>- Select period and magnitudes from select boxes</p>
