Fix link misattribution

--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -45,7 +45,7 @@
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="http://www.jma.go.jp/jma/index.html" target="_blank">Japan Meteoroligical Agency</a></p>
         <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p><a class="button" href="https://kaz-ogiwara.github.io/works/temperature/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
     </div>
