--- a/works/tourists/description-en.html
+++ b/works/tourists/description-en.html
@@ -44,7 +44,7 @@
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p><a class="button" href="https://kaz-ogiwara.github.io/works/tourists/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
     </div>
