--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -44,7 +44,7 @@
         <p>This work was originallu submitted as a class assignment, and then improved in 2018.</p>
         <p>Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/jpycoins/">See the App</a></p>
+        <p><a class="button" href="https://kaz-ogiwara.github.io/works/earthquakes/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
     </div>
