Adjust window width

--- a/works/viz4socialgood/index.html
+++ b/works/viz4socialgood/index.html
@@ -28,6 +28,7 @@
 				<h5>Viz for Social Good: Visualization of Human Trafficking</h5>
 				<p>- Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
 				<p>- By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
+				<p>- This visualization is optimized for PC (with 960+px width), sorry!</p>
 			</div>
       <div id="canvas-block">
         <div id="canvas">
