--- a/works/viz4socialgood/index.html
+++ b/works/viz4socialgood/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Interactive sankey diagram, map and details of Human Trafficking">
 		<meta property="og:url" content="https://kaz-ogiwara.github.io/viz/teachers/" />
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Viz for Social Good: Visualization of Human Trafficking" />
+		<meta property="og:title" content="Visualization of Human Trafficking" />
 		<meta property="og:description" content="Interactive sankey diagram, map and details of Human Trafficking" />
 		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<link rel="stylesheet" href="../../assets/css/default.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Viz for Social Good: Visualization of Human Trafficking - kaz-ogiwara.github.io</title>
+    <title>Visualization of Human Trafficking - kaz-ogiwara.github.io</title>
   </head>
   <body>
     <div id="container">
@@ -24,7 +24,7 @@
 				</a>
 			</div>
 			<div id="title-block">
-				<h1>Viz for Social Good: Visualization of Human Trafficking</h1>
+				<h1>Visualization of Human Trafficking</h1>
 				<h5>"But you do not know where I came from or where I am going"</h5>
 				<p>- Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
 				<p>- By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
