--- a/works/viz4socialgood/description-amp-en.html
+++ b/works/viz4socialgood/description-amp-en.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html">
-    <title>Viz for Social Good: Visualization of Human Trafficking</title>
+    <title>Visualization of Human Trafficking</title>
 		<style amp-custom>
       * {
         padding: 0;
@@ -154,7 +154,7 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "Article",
-				"headline": "Viz for Social Good: Visualization of Human Trafficking",
+				"headline": "Visualization of Human Trafficking",
 				"image": [
 					"https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png"
 				]
@@ -172,7 +172,7 @@
       </div>
       <div id="title-block">
         <div class="date">July 2018</div>
-        <h1>Viz for Social Good: Visualization of Human Trafficking</h1>
+        <h1>Visualization of Human Trafficking</h1>
         <h3>"But you do not know where I came from or where I am going"</h3>
       </div>
       <div id="eyecatch-block">
