--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Viz for Social Good: Visualization of Human Trafficking" />
+    <meta property="og:title" content="Visualization of Human Trafficking" />
     <meta property="og:description" content=""But you do not know where I came from or where I am going"" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Viz for Social Good: Visualization of Human Trafficking</title>
+    <title>Visualization of Human Trafficking</title>
 		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-amp-en.html">
     <link rel="stylesheet" href="../../assets/css/style.css">
   </head>
@@ -32,7 +32,7 @@
       </div>
       <div id="title-block">
         <div class="date">July 2018</div>
-        <h1>Viz for Social Good: Visualization of Human Trafficking</h1>
+        <h1>Visualization of Human Trafficking</h1>
         <h3>"But you do not know where I came from or where I am going"</h3>
       </div>
       <div id="eyecatch-block">
