Change description image to GIF

--- a/works/viz4socialgood/description-amp-en.html
+++ b/works/viz4socialgood/description-amp-en.html
@@ -183,7 +183,7 @@
       <div id="article-block">
         <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
         <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
-        <p><img src="img/description01.png"></p>
+        <p><img src="img/screencast_viz4socialgood.gif"></p>
         <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
         <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
         <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/viz4socialgood/">See the App</a></p>
