Fix OGP image and link

--- a/works/viz4socialgood/index.html
+++ b/works/viz4socialgood/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Interactive sankey diagram, map and details of Human Trafficking">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/viz/teachers/" />
+		<meta property="og:url" content="https://kaz-ogiwara.github.io/viz/viz4socialgood/" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Visualization of Human Trafficking" />
 		<meta property="og:description" content="Interactive sankey diagram, map and details of Human Trafficking" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png" />
+		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<link rel="stylesheet" href="../../assets/css/default.css">
     <link rel="stylesheet" href="css/style.css">
